--- a/src/components/mod.header/header.css
+++ b/src/components/mod.header/header.css
@@ -3,7 +3,7 @@
     font-size: 60px;
     text-align: center;
     margin:0;
-    background-color: F5F5ED;
+    background-color: #F5F5ED;
 }
 
 #header a {
