updated post page

--- a/src/components/mod.box_link/box_link.css
+++ b/src/components/mod.box_link/box_link.css
@@ -26,7 +26,8 @@
 }
 
 .box_label {
-    background-color: rgba(255,255,255,.85);
+    background-color: var(--white_opacity);
+    color: var(--text_main_color);
 
     display: flex;
     flex-direction: column;
@@ -37,7 +38,6 @@
     letter-spacing: 1px;
     font-family: 'Cormorant Garamond', serif;
     width: 80%;
-    /* linear-gradient(rgba(211, 211, 211, .7), rgba(211, 211, 211, .7)) */
 
 }
 
