--- a/src/components/mod.nav_bar/nav_bar.css
+++ b/src/components/mod.nav_bar/nav_bar.css
@@ -1,13 +1,13 @@
 nav {
     max-width: var(--maxWidth);
     margin: 0 auto;
-    background-color: var(--secondary_color);
+    /* background-color: var(--secondary_color); */
 }
 
 .nav-list {
     display: flex;
-    border-top: 1px solid #e5e5e5;
-    border-bottom: 1px solid #e5e5e5;
+    border-top: 1px solid var(--nav_bar_border);
+    border-bottom: 1px solid var(--nav_bar_border);
     justify-content: center;
 
     margin-bottom: 25px;
@@ -28,11 +28,14 @@ nav {
 .nav-list li > a {
     padding-top: 8px;
     text-decoration: none;
-    color: #333333;
+    color: var(--text_main_color);
+
 }
 
 .nav-list li a:hover, .nav-list li a:focus {
     border-top: 3px solid var(--hover);
+    border-bottom: 3px solid var(--hover);
+
     color: var(--hover);
 }
 
