--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,12 @@
     /* --hover: #00833f; */
     --hover: #CC8B8C;
     --button: #738CAF;
-    --light_background: white;
+    --light_background: #F5F5F5;
     --secondary_color: #E5E5E5;
+    --text_main_color: #333333;
+    --nav_bar_border: #E5E5E5;
+    --white_opacity: rgba(255,255,255,.85);
+    --card_background: white;
     --maxWidth: 1200px;
 }
 
