--- a/src/components/mod.posts/mod.view_posts/users/post_listing/post_listing.css
+++ b/src/components/mod.posts/mod.view_posts/users/post_listing/post_listing.css
@@ -1,3 +1,8 @@
 .post_page {
     margin-bottom: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
 }
