--- a/src/components/mod.posts/mod.view_posts/users/view_posts/view_posts.css
+++ b/src/components/mod.posts/mod.view_posts/users/view_posts/view_posts.css
@@ -1,40 +1,119 @@
 .posts {
-    max-width: 800px;
 
-    border-top: 1px dashed grey;
+    background-color: var(--card_background);
+    border: 1px solid #F0F0F0;
+    border-radius: 3px;
+    width: 40%;
+    height: 200px;
+    padding: 0;
+   
 
-    padding-top: 10px;
-    margin: 0 auto;
     margin-top: 50px;
+
+    margin: 40px auto;
+    
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+/* top of card */
+.top-content {
+    height: 45%;
+    width: 100%;
+
+    padding-left: 20px;
+    padding-right: 20px;
 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
+
+    border-radius: 3px;
+    border-bottom-left-radius: 0%;
+    border-bottom-right-radius: 0%;
 }
 
-.posts:first-child {
-    border: none;
+.top-content > h3 {
+    font-size: 14px;
+    overflow-wrap: break-word;
 }
 
-.posts > h2 {
-    color: maroon;
+.middle-content {
+    width: 100%;
+    height: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
 
-.posts > h6 {
+.middle-content > h6 {
     margin-top: 3px;
     color: grey;
+    font-size: 9px;
 }
 
-.posts > span {
+.middle-content > span {
     border-bottom: 1px solid black;
     width: 70px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.posts > p {
-    max-width: 800px;
-    text-align: center;
+    margin-top: 5px;
     margin-bottom: 5px;
 }
+
+.middle-content > p {
+    font-size: 10px;
+    color: black;
+    font-weight: bold;
+    
+}
+
+/* bottom of card */
+.bottom-content {
+    padding: 0;
+    margin: 0;
+    height: 15%;
+    width: 100%;
+    margin-top: auto;
+}
+
+.bottom-content > button {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    border-top-left-radius: 0%;
+    border-top-right-radius: 0%;
+    font-size: 14px;
+}
+
+    /* ----------
+            COMPUTER SCREEN REGULAR 
+    ----------------------*/
+    @media screen and (min-width: 768px) {
+
+        .posts {  
+            width: 30%;
+        }
+
+        .top-content > h3 {
+            font-size: 22px;
+        }
+
+        .middle-content > h6 {
+            font-size: 13px;
+        }
+
+        .middle-content > p {
+            font-size: 12px;
+        }
+
+    }
+    
+    @media screen and (min-width: 1024px) {
+
+    
+    }
