--- a/src/components/mod.nav_bar/nav_bar.css
+++ b/src/components/mod.nav_bar/nav_bar.css
@@ -27,6 +27,8 @@ nav {
 
 .nav-list li > a {
     padding-top: 8px;
+    padding-bottom: 8px;
+
     text-decoration: none;
     color: var(--text_main_color);
 
