--- a/src/App.css
+++ b/src/App.css
@@ -31,18 +31,31 @@
 }
 
 
-#root {
-    height: 100%;
+body {
+    /* height: 100%; */
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
-body {
-    height: 100%;
+#root {
+    /* height: 100%; */
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 .App {
     height: 100%;
     width: 100%;
     background-color: var(--light_background);
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    border: 10px solid green
     
 }
 
