Updated the sites title, added a back button when click on a post & styling, added images to the top of the page instead of the bottom

--- a/src/components/mod.home/home.css
+++ b/src/components/mod.home/home.css
@@ -32,6 +32,10 @@
     margin-top: 10px;
 }
 
+.newest_post > h3 {
+    text-align: center;
+}
+
 .newest_post > p {
     text-align: left;
     max-width: 680px;
