--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,8 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    /* min-width: 100vw; */
+
 }
 
 #root {
@@ -45,18 +47,18 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    /* min-width: 100vw; */
 }
 
 .App {
     height: 100%;
     width: 100%;
     background-color: var(--light_background);
+
     margin: 0;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    /* min-width: 100vw; */
     
 }
-
-
-
