--- a/src/components/mod.posts/mod.view_posts/users/post/post.css
+++ b/src/components/mod.posts/mod.view_posts/users/post/post.css
@@ -31,6 +31,13 @@
     text-align: center;
 }
 
+.h2_admin {
+    font-family: "Roboto","Trebuchet MS","Tahoma","Verdana","Arial","sans-serif";
+    font-weight: 400;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    text-align: start;
+}
 
 /*
 - - Content
@@ -49,6 +56,27 @@
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
 
+.textarea_admin {
+    text-align: start;
+    width: 100%;
+}
+
+.textarea_lg {
+    min-height: 200px;
+}
+
+.space-pad-10 {
+    padding-left: 5px;
+    padding-right: 5px;
+
+}
+
+.md {
+    font-size: 14px;
+    padding: 10px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
 
 /********************
     Back Button 
