--- a/src/components/mod.posts/mod.view_posts/users/post/post.css
+++ b/src/components/mod.posts/mod.view_posts/users/post/post.css
@@ -1,5 +1,5 @@
 .blog_post {
-    background-color: #a09a9a10;
+    /* background-color: #d1caca10; */
     padding: 30px;
     border-radius: 5px; 
 }
@@ -12,12 +12,14 @@
     justify-content: center;
     align-items: center;
     padding-bottom: 30px;
+    width: 100%;
 }
 
 .blog_image {
-    width: 30%;
-    max-width: 100%;
+    width: 100%;
+    max-width: 935px;
     height: auto;
+    max-height: 518px;
 }
 
 
